--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/h2Latte/portfolio#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.4.1",
-    "parcel": "^2.4.1"
+    "parcel": "^2.4.1",
+    "prettier": "2.7.1"
   }
 }
